--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,7 @@
-version: '2'
+version: '3'
 
 services:
   front:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    build: .
     ports:
       - '4200:4200'
