--- a/package.json
+++ b/package.json
@@ -19,11 +19,7 @@
     "@angular/platform-browser": "~8.2.4",
     "@angular/platform-browser-dynamic": "~8.2.4",
     "@angular/router": "~8.2.4",
-    "apollo-angular": "^1.8.0",
-    "apollo-angular-link-http": "^1.9.0",
-    "apollo-cache-inmemory": "^1.6.3",
-    "apollo-client": "^2.6.4",
-    "apollo-link": "^1.2.13",
+    "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
